--- a/index.html
+++ b/index.html
@@ -1,6 +1,66 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="music, visione, space, artist">
+    <meta name="og:title" content="visione space">
+    <meta name="title" content="visione space">
+    <meta name="og:description" content="visione space">
+    <meta name="description" content="visione space">
+    <meta name="robots" content="index, follow">
+
+    <title>visione space</title>
+<style>
+
+.centered {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.box {
+  text-align: center;
+}
+
+.box img {
+  width: 200px;
+}
+
+.space {
+  padding-top: 80px;
+}
+
+.button {
+  display: inline-block;
+  width: 82px;
+  border: 1.5px solid #000;
+  padding: 3px;
+}
+
+a {
+  color: #000!important;
+  text-decoration: none!important;
+}
+
+</style>
+  </head>
   <body>
-    visione.space
+    <div class="centered box">
+      <img src="logo.png" alt="notte ele a">
+
+      <div class="space">
+
+      <a class="button center-h" href="#spotify">
+        spotify
+      </a>
+      <br>
+      <br>
+      <a class="button center-h" style="margin-left: -4px" href="#apple">
+        apple music
+      </a>
+    </div>
   </body>
 </html>
