--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 .centered {
   position: absolute;
-  top: 30%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -35,14 +35,20 @@
 
 .button {
   display: inline-block;
-  width: 82px;
+  width: 90px;
   border: 1.5px solid #000;
-  padding: 3px;
+  padding: 5px 3px 3px 3px;
+}
+
+@font-face {
+  font-family: "avenir-next";
+  src: url("/AvenirLTStd-Medium.ttf");
 }
 
 a {
   color: #000!important;
   text-decoration: none!important;
+  font-family: "avenir-next";
 }
 
 </style>
@@ -53,12 +59,12 @@ a {
 
       <div class="space">
 
-      <a class="button center-h" href="#spotify">
+      <a class="button center-h" href="https://open.spotify.com/track/6GCBxjRaV0kjv9zU7koniN?si=sx9QC4QJTniPdLWAcfaSRg">
         spotify
       </a>
       <br>
       <br>
-      <a class="button center-h" style="margin-left: -4px" href="#apple">
+      <a class="button center-h" style="margin-left: -4px" href="https://music.apple.com/ch/album/notte/1531811625?i=1531811627&l=it">
         apple music
       </a>
     </div>
