--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <title>visione space</title>
 <style>
 
+  html {
+    background-color: #457752;
+  }
+
 .centered {
   position: absolute;
   top: 45%;
@@ -55,17 +59,8 @@ a {
   </head>
   <body>
     <div class="centered box">
-      <img src="logo.png" alt="notte ele a">
-
-      <div class="space">
-
-      <a class="button center-h" href="https://open.spotify.com/track/6GCBxjRaV0kjv9zU7koniN?si=sx9QC4QJTniPdLWAcfaSRg">
-        spotify
-      </a>
-      <br>
-      <br>
-      <a class="button center-h" style="margin-left: -4px" href="https://music.apple.com/ch/album/notte/1531811625?i=1531811627&l=it">
-        apple music
+      <a href="#">
+        <img src="scarica_il_beat.png" alt="scarica il beat">
       </a>
     </div>
   </body>
