--- a/index.html
+++ b/index.html
@@ -63,5 +63,14 @@ a {
         <img src="scarica_il_beat.png" alt="scarica il beat">
       </a>
     </div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G5S3FV9ELE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G5S3FV9ELE');
+</script>
   </body>
 </html>
