--- a/index.html
+++ b/index.html
@@ -14,63 +14,38 @@
     <title>visione space</title>
 <style>
 
-  html {
-    background-color: #457752;
-  }
-
-.centered {
+div {
+  max-width: 300px;
+  width: 90%;
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.box {
-  text-align: center;
-}
-
-.box img {
-  width: 200px;
-}
-
-.space {
-  padding-top: 80px;
-}
-
-.button {
-  display: inline-block;
-  width: 90px;
-  border: 1.5px solid #000;
-  padding: 5px 3px 3px 3px;
-}
-
-@font-face {
-  font-family: "avenir-next";
-  src: url("/AvenirLTStd-Medium.ttf");
-}
-
-a {
-  color: #000!important;
-  text-decoration: none!important;
-  font-family: "avenir-next";
+img {
+  width: 100%;
 }
 
 </style>
   </head>
   <body>
-    <div class="centered box">
-      <a href="https://www.visione.space/Ikigai%20-%20Кардио%20ритм.mp3" download title="Ikigai - Кардио ритм.mp3" alt="Ikigai - Кардио ритм.mp3">
-        <img src="scarica_il_beat.png" alt="scarica il beat">
+    <div>
+      <a href="https://youtube.com/shorts/G-G-JUjHbu4" title="AR EXPERIENCE" target="_blank">
+        <img src="ar_expreince.png" alt="AR EXPERIENCE" />
+      </a>
+      <a href="https://youtu.be/M7eXSaIeGW0" title="SOUNDTRACK" target="_blank">
+        <img src="soundtrack.png" alt="SOUNDTRACK" />
+      </a>
+      <a href="https://youtu.be/pEDo7CDrE7A" title="WEIGHT OF WORDS" target="_blank">
+        <img src="weight.png" alt="WEIGHT OF WORDS" />
+      </a>
+      <a href="https://youtu.be/BtQbWyPyUVo" title="AR EXPERIENCE" target="_blank">
+        <img src="visa.png" alt="VISA INFINITY" />
+      </a>
+      <a href="https://www.youtube.com/playlist?list=PLVfU59TPryXL1Ug2IcV_yXizwTOWN5f92" title="AT THIS MOMENT" target="_blank">
+        <img src="atthismoment.png" alt="AT THIS MOMENT" />
       </a>
     </div>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-G5S3FV9ELE"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-G5S3FV9ELE');
-</script>
   </body>
 </html>
